--- a/counter.html
+++ b/counter.html
@@ -5,151 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>文字数カウント & 保存ツール</title>
 
-<style>
-:root{
-  --bg:#ffffff;
-  --card:#f9fafb;
-  --accent:#22c55e;
-  --accent-soft:#dcfce7;
-  --text:#1f2937;
-  --border:#e5e7eb;
-}
+<link rel="stylesheet" href="style.css">
 
-body{
-  font-family:"Noto Sans JP",system-ui,sans-serif;
-  background:var(--bg);
-  color:var(--text);
-  max-width:720px;
-  margin:30px auto;
-  padding:20px;
-}
-
-h1{margin-top:0}
-
-.card{
-  background:var(--card);
-  border-radius:14px;
-  padding:16px;
-  margin-bottom:16px;
-  border:1px solid var(--border);
-}
-
-.notice{
-  background:var(--accent-soft);
-  border-left:6px solid var(--accent);
-  padding:12px;
-  border-radius:10px;
-  margin-bottom:16px;
-  font-size:.95em;
-}
-
-.notice-item{
-  margin-top:10px;
-  padding-top:10px;
-  border-top:1px dashed #86efac;
-}
-.notice-date{
-  font-size:.8em;
-  color:#166534;
-}
-.notice-title{
-  font-weight:bold;
-}
-
-textarea{
-  width:100%;
-  min-height:160px;
-  padding:12px;
-  font-size:1em;
-  border-radius:10px;
-  border:1px solid var(--border);
-}
-
-.controls button, select, input[type=number]{
-  padding:6px 10px;
-  border-radius:8px;
-  border:1px solid var(--border);
-  background:#fff;
-  cursor:pointer;
-}
-
-.controls button:hover{
-  background:var(--accent-soft);
-}
-
-.info p{margin:4px 0}
-
-/* 保存ボタンのデザインをより目立たせる */
-.save-btn{
-  background:var(--accent);
-  color:#fff;
-  border:none;
-  font-weight: bold;
-  padding: 8px 16px; /* サイズを大きく */
-}
-
-.save-btn:hover{
-  filter: brightness(1.1); /* ホバーで明るく */
-  background:var(--accent);
-}
-
-/* すべてクリアボタンのスタイルを追加 */
-.clear-btn {
-  background: #f87171; /* 赤色系 */
-  color: #fff;
-  border: none;
-  font-weight: bold;
-  padding: 8px 16px;
-  margin-left: 8px; /* 保存ボタンとの間隔 */
-}
-
-.clear-btn:hover {
-  background: #ef4444; /* ホバーで濃い赤 */
-}
-
-
-.settings-btn{
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  padding:10px 14px;
-  border:none;
-  border-radius:50px;
-  background:var(--accent);
-  color:#fff;
-}
-
-/* 広告表示の制御 */
-.ad-sp{display:none}
-.ad-pc{display:block}
-html[data-view="sp"] .ad-sp{display:block}
-html[data-view="sp"] .ad-pc{display:none}
-
-/* 設定で広告をOFFにした場合、広告ブロックを完全に非表示にする */
-html[data-ads="false"] .ad-sp,
-html[data-ads="false"] .ad-pc {
-  display: none !important;
-}
-
-
-.modal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.5);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-}
-.modal.hidden{display:none}
-
-.modal-box{
-  background:#fff;
-  border-radius:14px;
-  padding:20px;
-  max-width:420px;
-  width:100%;
-}
-</style>
 </head>
 
 <body>
