--- a/counter.html
+++ b/counter.html
@@ -70,35 +70,11 @@ if(localStorage.getItem('agreed')!=='true'){
 <script src="https://adm.shinobi.jp/s/025d5af8ede4ff475032852f62945fae"></script>
 </div>
 
-<button class="settings-btn" onclick="openSettings()">⚙</button>
+<a href="settings.html" class="settings-btn">⚙</a>
 
-<div id="settings" class="modal hidden">
-  <div class="modal-box">
-    <h2>ユーザー設定</h2>
-
-    <p>表示モード</p>
-    <label><input type="radio" name="view" value="sp"> スマホ</label><br>
-    <label><input type="radio" name="view" value="pc"> PC</label>
-
-    <p>
-      <label>
-        <input type="checkbox" id="adsToggle">
-        広告を表示する
-      </label>
-    </p>
-
-    <ul>
-      <li><a href="terms.html" target="_blank">利用規約</a></li>
-      <li><a href="terms.html#privacy" target="_blank">プライバシーポリシー</a></li>
-    </ul>
-
-    <button onclick="closeSettings()">閉じる</button>
-  </div>
-</div>
 
 <script>
 /* ===== アクセスカウンター (GAS連携) ===== */
-// ★提供いただいたGASのURLを設定済み
 const ACCESS_GAS_URL = "https://script.google.com/macros/s/AKfycbwALCjWmxSF-IzTP3bBp_wdlo-5k_Wuag1dH0D3cuUg5pYqLf6E2cf2L1NcIY476DqyHw/exec"; 
 
 const accessCounterElement = document.getElementById('accessCounter');
@@ -226,43 +202,16 @@ function clearText() {
 
 
 /* ===== 表示モード / 広告設定の初期読み込み ===== */
+// 広告設定はsettings.htmlで変更され、counter.htmlは読み取り専用になる
 const view = localStorage.getItem('viewMode');
 if (view) {
   document.documentElement.setAttribute('data-view', view);
 }
 
 const ads = localStorage.getItem('showAds');
-// localStorageに設定がなければデフォルトは'true'（表示）
 // 'false'が設定されていれば、data-ads="false"を付与し、CSSで非表示にする
 document.documentElement.setAttribute('data-ads', ads === 'false' ? 'false' : 'true');
 
-
-/* ===== 設定 ===== */
-const modal=document.getElementById('settings');
-const adsToggle=document.getElementById('adsToggle');
-
-function openSettings(){
-  modal.classList.remove('hidden');
-  document.querySelectorAll('input[name=view]').forEach(r=>{
-    r.checked=r.value===localStorage.getItem('viewMode');
-  });
-  adsToggle.checked=localStorage.getItem('showAds')!=='false';
-}
-function closeSettings(){modal.classList.add('hidden');}
-
-document.querySelectorAll('input[name=view]').forEach(r=>{
-  r.onchange=()=>{
-    localStorage.setItem('viewMode',r.value);
-    document.documentElement.setAttribute('data-view',r.value);
-  };
-});
-
-adsToggle.onchange=()=>{
-  const isChecked = adsToggle.checked;
-  localStorage.setItem('showAds', isChecked ? 'true' : 'false');
-  // 広告表示設定を即座に<html>タグに反映
-  document.documentElement.setAttribute('data-ads', isChecked ? 'true' : 'false');
-};
 
 /* ===== 保存（文字化け対策済み） ===== */
 function download(){
