--- a/terms.html
+++ b/terms.html
@@ -53,7 +53,7 @@ section h2 {
 <p>本ツールでは、収益化のため外部広告配信サービスを利用しています。これにより、広告サービス事業者がCookieなどの情報を収集する場合があります。情報収集の詳細は、各広告サービスのプライバシーポリシーをご確認ください。</p>
 
 <h3>4. 設定の保存（ローカルストレージ）</h3>
-<p>表示モード（スマホ/PC）、広告の表示/非表示設定、カスタム文字数制限は、お客様のブラウザの**ローカルストレージに保存されます。** これらの設定はいつでも**設定画面（settings.html）で変更**することが可能です。</p>
+<p>表示モード（スマホ/PC）、広告の表示/非表示設定、カスタム文字数制限は、お客様のブラウザのローカルストレージに保存されます。 これらの設定はいつでも設定画面（settings.html）で変更することが可能です。</p>
 </section>
 
 <section>
@@ -119,7 +119,7 @@ section h2 {
 <p>本ツールでは、収益化のため外部広告配信サービスを利用しています。これにより、広告サービス事業者がCookieなどの情報を収集する場合があります。情報収集の詳細は、各広告サービスのプライバシーポリシーをご確認ください。</p>
 
 <h3>4. 設定の保存（ローカルストレージ）</h3>
-<p>表示モード（スマホ/PC）、広告の表示/非表示設定、カスタム文字数制限は、お客様のブラウザの**ローカルストレージに保存されます。** これらの設定はいつでも**設定画面（settings.html）で変更**することが可能です。</p>
+<p>表示モード（スマホ/PC）、広告の表示/非表示設定、カスタム文字数制限は、お客様のブラウザの**ローカルストレージに保存されます。これらの設定はいつでも設定画面（settings.html）で変更することが可能です。</p>
 </section>
 
 <section>
