--- a/settings.html
+++ b/settings.html
@@ -9,12 +9,8 @@
 
 <style>
 /* settings.html専用のレイアウト */
-body {
-    max-width: 500px;
-    margin: 30px auto;
-    padding: 20px;
-    background: var(--bg);
-}
+body{font-family:"Noto Sans JP",system-ui,sans-serif;
+max-width:500px;margin:30px auto;padding:20px}
 .setting-group {
     background: var(--card);
     border-radius: 14px;
@@ -29,15 +25,16 @@ body {
     padding-bottom: 8px;
     margin-bottom: 12px;
 }
-button {
+.setting-group button {
     padding: 10px 15px;
     margin-right: 8px;
     border-radius: 8px;
     border: 1px solid var(--border);
     background: #fff;
     cursor: pointer;
+    margin-bottom: 5px; /* ボタンが縦に並んでも間隔を空ける */
 }
-button:hover {
+.setting-group button:hover {
     background: var(--accent-soft);
 }
 .active-btn {
@@ -50,19 +47,20 @@ button:hover {
     width: 100%;
     margin-top: 20px;
     padding: 12px;
-    background: #4f46e5;
+    background: var(--accent);
     color: #fff;
     font-weight: bold;
     border: none;
     text-align: center;
     text-decoration: none;
+    border-radius: 8px;
 }
 .link-list {
     list-style: none;
     padding: 0;
 }
 .link-list a {
-    color: #4f46e5;
+    color: var(--accent);
     text-decoration: none;
     display: block;
     padding: 8px 0;
